--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,6 @@
         "php": ">=5.3.2"
     },
     "autoload": {
-        "psr-0": {
-            "Routing": "lib"
-        }
+        "files": [ "lib/Dispatcher.php", "lib/Route.php", "lib/Router.php" ]
     }
 }
