--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,6 @@
         "php": ">=5.3.2"
     },
     "autoload": {
-        "files": [ "lib/Dispatcher.php", "lib/Route.php", "lib/Router.php" ]
+        "files": [ "php-router.php" ]
     }
 }
